product card de prueba

--- a/public/view/html/prueba.html
+++ b/public/view/html/prueba.html
@@ -4,9 +4,32 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="/view/css/prueba.css">
     <title>Documento de prueba</title>
 </head>
 <body>
-    
+    <section>
+        <article>
+            <h3>Futbol</h3>
+            <div class="card">
+                <img src="/view/img/botines-de-futbol-puma-ultra.jpg" alt="botines-de-futbol-puma-ultra">
+                <h1>Botines Puma Ultra</h1>
+                <p class="price">$19.99</p>
+                <p>Lorem ipsum dolor sit amet.</p>
+            </div>
+            <div class="card">
+                <img src="/view/img/pelota-de-argentina-adidas.jpg" alt="pelota-de-argentina-adidas">
+                <h1>Pelota Adidas Argentina</h1>
+                <p class="price">$19.99</p>
+                <p>Lorem ipsum dolor sit amet.</p>
+            </div>
+            <div class="card">
+                <img src="/view/img/camiseta-de-argentina-adidas.jpg" alt="camiseta-de-argentina-adidas">
+                <h1>Camiseta Seleccion Argentina Adidas</h1>
+                <p class="price">$19.99</p>
+                <p>Lorem ipsum dolor sit amet.</p>
+            </div>
+        </article>
+    </section>
 </body>
 </html>
