--- a/public/view/css/styles.css
+++ b/public/view/css/styles.css
@@ -1,1 +1,63 @@
+/*  BODY */
+body {
+    /* background-color: aqua; */
+    margin: 0;
+    font-family: Verdana,sans-serif;
+    font-size: 15px;
+    min-height: 100vh;
+    display: flex;
+    flex-direction: column;
+}
+ /* HEADER */
+.header{
+    text-align: center;
+    background-color: blue;
+}
 
+/* NAVIGATOR (OPTIONS) */
+nav{
+    /* position: absolute; */
+    display: block;
+    width: 10%;
+    height: 100%;
+    position: fixed;
+    top: 75px;
+    text-align: center;
+    background-color: rebeccapurple;
+}
+
+ul {
+    /* list-style-type: none; */
+    margin: 0;
+    padding: 0;
+}
+
+li a {
+    display: block;
+    padding: 8px 0 8px 0px;
+    text-decoration: none;
+    color: #000;
+    
+}
+
+/* Change the link color on hover */
+li a:hover {
+    background-color: #555;
+    color: white;
+}
+
+/* MAIN (SECTIONS) */
+main{
+    margin-left: 10%;
+    text-align: center;
+    /* background-color: greenyellow; */
+}
+
+/* FOOTER */
+.footer{
+    padding: 1em;
+    margin-top: auto;
+    z-index: 1;
+    text-align: center;
+    background-color: yellow;
+}
