--- a/public/view/html/index.html
+++ b/public/view/html/index.html
@@ -1,1 +1,40 @@
-
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="/view/css/styles.css">
+    <title>Página Principal</title>
+</head>
+<body>
+    <header class="header">
+        <h1 class="title">Header</h1>
+    </header>
+    <nav class="menu">
+        <h1 class="category">Nav</h1>
+        <ul>
+            <li><a href="#">Sección 1</a></li>
+            <li><a href="#">Sección 2</a></li>
+            <li><a href="#">Sección 3</a></li>
+            <li><a href="#">Sección 4</a></li>
+        </ul>
+    </nav>
+    <main class="main">
+        MAIN
+        <section class="section-1">
+            Sección 1
+        </section>
+        <section class="section-2">
+            Sección 2
+        </section>
+        <section class="section-3">
+            Sección 3
+        </section>
+        <section class="section-4">
+            Sección 4
+        </section>
+    </main>
+    <footer class="footer">FOOTER</footer>
+</body>
+</html>
