--- a/public/view/css/prueba.css
+++ b/public/view/css/prueba.css
@@ -1,6 +1,7 @@
 .card {
     box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
     max-width: 25%;
+    max-height: 25%;
     text-align: center;
     font-family: arial;
   }
@@ -16,4 +17,8 @@ article{
   .price {
     color: grey;
     font-size: 22px;
+  }
+
+  h3{
+    text-align: center;
   }
