--- a/public/view/css/styles.css
+++ b/public/view/css/styles.css
@@ -11,21 +11,33 @@ body {
  /* HEADER */
 .header{
     text-align: center;
-    background-color: blue;
 }
-
+.title{
+    text-align: center;
+    margin-top: 3%;
+}
+.header img{
+    width: 10%;
+    height: 10%;
+    float: left;
+    margin-left: 5%;
+}
 /* NAVIGATOR (OPTIONS) */
 nav{
     /* position: absolute; */
     display: block;
-    width: 10%;
+    width: 15%;
     height: 100%;
     position: fixed;
-    top: 75px;
+    top: 20%;
     text-align: center;
-    background-color: rebeccapurple;
+    /*background-color: rebeccapurple;*/
 }
 
+.menu img{
+    width: 20%;
+    height: 10%;
+}
 ul {
     /* list-style-type: none; */
     margin: 0;
@@ -34,11 +46,12 @@ ul {
 
 li a {
     display: block;
-    padding: 8px 0 8px 0px;
+    padding: 8% 0% 8% 0%;
     text-decoration: none;
     color: #000;
-    
+    margin: 0% 0% 5% 0%;
 }
+
 
 /* Change the link color on hover */
 li a:hover {
@@ -59,5 +72,32 @@ main{
     margin-top: auto;
     z-index: 1;
     text-align: center;
-    background-color: yellow;
+    /*background-color: yellow;*/
+    
+}
+
+.card {
+    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
+    max-width: 25%;
+    max-height: min-content;
+    text-align: center;
+    font-family: arial;
+}
+
+article{
+  display: flex;
+  justify-content: space-evenly;
+}
+  .card img{
+    width: 30%;
+    height: 35%;
+}
+.price {
+    color: grey;
+    font-size: 22px;
+}
+
+.section-name{
+    text-align: justify;
+    margin-left: 8%;
 }
