--- a/public/view/html/index.html
+++ b/public/view/html/index.html
@@ -9,24 +9,65 @@
 </head>
 <body>
     <header class="header">
-        <h1 class="title">Header</h1>
+        <img src="/view/img/logo.png" alt="logo">
+        <h1 class="title">Tienda Online Todo Deportes</h1>
     </header>
     <nav class="menu">
-        <h1 class="category">Nav</h1>
+        <h1 class="category">Categorias</h1>
         <ul>
-            <li><a href="#">Sección 1</a></li>
-            <li><a href="#">Sección 2</a></li>
-            <li><a href="#">Sección 3</a></li>
-            <li><a href="#">Sección 4</a></li>
+            <li><a href="#section-futbol"><img src="/view/img/futbol.svg" alt="futbol">Sección Futbol</a></li>
+            <li><a href="#section-basquet"><img src="/view/img/basquet.svg" alt="basquet"> Sección Basquet</a></li>
+            <li><a href="#"><img src="/view/img/tenis.svg" alt="tenis"> Sección Tenis</a></li>
+            <li><a href="#"><img src="/view/img/natacion.svg" alt="natacion"> Sección Natacion</a></li>
         </ul>
     </nav>
     <main class="main">
-        MAIN
-        <section class="section-1">
-            Sección 1
+        
+        <section id="section-futbol">
+            <h3 class="section-name">Futbol</h3>
+            <article>
+                <div class="card">
+                    <img src="/view/img/botines-de-futbol-puma-ultra.jpg" alt="botines-de-futbol-puma-ultra">
+                    <h1>Botines Puma Ultra</h1>
+                    <p class="price">$9.299</p>
+                    
+                </div>
+                <div class="card">
+                    <img src="/view/img/pelota-de-argentina-adidas.jpg" alt="pelota-de-argentina-adidas">
+                    <h1>Pelota Adidas Argentina</h1>
+                    <p class="price">$7.775</p>
+            
+                </div>
+                <div class="card">
+                    <img src="/view/img/camiseta-de-argentina-adidas.jpg" alt="camiseta-de-argentina-adidas">
+                    <h1>Camiseta Seleccion Argentina Adidas</h1>
+                    <p class="price">$10.890</p>
+                    
+                </div>
+            </article>
         </section>
-        <section class="section-2">
-            Sección 2
+        <section id="section-basquet">
+            <h3 class="section-name">Basquet</h3>
+            <article>
+                <div class="card">
+                    <img src="/view/img/zapatilla-de-basquet.jpg" alt="zapatilla-de-basquet">
+                    <h1>Zapatilla de Basquet</h1>
+                    <p class="price">$8.499</p>
+                    
+                </div>
+                <div class="card">
+                    <img src="/view/img/pelota-basquet.jpg" alt="pelota-basquet">
+                    <h1>Pelota de Basquet</h1>
+                    <p class="price">$2.940</p>
+                    
+                </div>
+                <div class="card">
+                    <img src="/view/img/aro-de-basquet-profesional.jpg" alt="aro-de-basquet-profesional">
+                    <h1>Aro de Basquet profesional</h1>
+                    <p class="price">$5.880</p>
+                    
+                </div>
+            </article>
         </section>
         <section class="section-3">
             Sección 3
@@ -35,6 +76,6 @@
             Sección 4
         </section>
     </main>
-    <footer class="footer">FOOTER</footer>
+    <footer class="footer"><p>&copy; Tienda de Deportes - Grupo 1 (nombres? ). </p></footer>
 </body>
 </html>
