--- a/public/view/html/prueba.html
+++ b/public/view/html/prueba.html
@@ -31,5 +31,31 @@
             </div>
         </article>
     </section>
+    <section>
+        <h3>Basquet</h3>
+        <article>
+            <div class="card">
+                <img src="/view/img/zapatilla-de-basquet.jpg" alt="zapatilla-de-basquet">
+                <h1>Zapatilla de Basquet</h1>
+                <p class="price">$19.99</p>
+                <p>Lorem ipsum dolor sit amet.</p>
+            </div>
+            <div class="card">
+                <img src="/view/img/pelota-basquet.jpg" alt="pelota-basquet">
+                <h1>Pelota de Basquet</h1>
+                <p class="price">$19.99</p>
+                <p>Lorem ipsum dolor sit amet.</p>
+            </div>
+            <div class="card">
+                <img src="/view/img/aro-de-basquet-profesional.jpg" alt="aro-de-basquet-profesional">
+                <h1>Aro de Basquet profesional</h1>
+                <p class="price">$19.99</p>
+                <p>Lorem ipsum dolor sit amet.</p>
+            </div>
+        </article>
+    </section>
+    <footer>
+        <p style="color: #bf7c2a">&copy; Veterinaria digital - FullStack Team. </p>
+    </footer>
 </body>
 </html>
