--- a/public/view/html/index.html
+++ b/public/view/html/index.html
@@ -4,12 +4,12 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="/view/css/styles.css">
+    <link rel="stylesheet" href="/css/styles.css">
     <title>Página Principal</title>
 </head>
 <body>
     <header class="header">
-        <img src="/view/img/logo.png" alt="logo">
+        <img src="/img/logo.png" alt="logo">
         <h1 class="title">Tienda Online Todo Deportes</h1>
     </header>
     <nav class="menu">
