--- a/public/view/html/index.html
+++ b/public/view/html/index.html
@@ -17,14 +17,11 @@
       <ul>
         <li>
           <a class="section-futbol" href="#section-futbol"
-            ><img src="/view/img/futbol.svg" alt="futbol" />Sección Futbol</a
-          >
+            ><img src="/view/img/futbol.svg" alt="futbol" />Sección Futbol</a>
         </li>
         <li>
           <a class="section-basquet" href="#section-basquet"
-            ><img src="/view/img/basquet.svg" alt="basquet" /> Sección
-            Basquet</a
-          >
+            ><img src="/view/img/basquet.svg" alt="basquet" /> Sección Basquet</a>
         </li>
         <li>
           <a class="section-tenis" href="#section-tenis"
@@ -33,15 +30,15 @@
         </li>
         <li>
           <a class="section-natacion" href="#section-natacion"
-            ><img src="/view/img/natacion.svg" alt="natacion" /> Sección
-            Natacion</a
-          >
+            ><img src="/view/img/natacion.svg" alt="natacion" /> Sección Natacion</a>
         </li>
       </ul>
     </nav>
     <main class="main">
-      <section id="section-futbol" class="section-1">
-        <h3 class="section-name">Futbol</h3>
+      <section class="section-1">
+        <!--<section id="section-futbol" class="section-1">-->
+        <a name="section-futbol"></a>
+        <h2 class="section-name">Futbol</h2>
         <article>
           <div class="card card-futbol">
             <img
@@ -69,8 +66,10 @@
           </div>
         </article>
       </section>
-      <section id="section-basquet" class="section-2">
-        <h3 class="section-name">Basquet</h3>
+      <section class="section-2">
+        <!--<section id="section-basquet" class="section-2">-->
+        <a name="section-basquet"></a>
+        <h2 class="section-name">Basquet</h2>
         <article>
           <div class="card card-basquet">
             <img
@@ -95,31 +94,32 @@
           </div>
         </article>
       </section>
-      <section id="section-tenis" class="section-3">
-        <h3 class="section-name">Tenis</h3>
+      <!--<section id="section-tenis" class="section-3">-->
+        <section class="section-3">
+        <a name="section-tenis"></a>
+        <h2 class="section-name">Tenis</h2>
         <article>
           <div class="card card-tenis">
             <img src="/view/img/raqueta-tenis.jpg" alt="raqueta-padel" />
             <h1>Raqueta TI Radical Elite</h1>
             <p class="price">$19.99</p>
-            <p>Lorem ipsum dolor sit amet.</p>
           </div>
           <div class="card card-tenis">
             <img src="/view/img/pelota-wilson.jpg" alt="pelota-wilson" />
             <h1>Pelota Wilson</h1>
             <p class="price">$19.99</p>
-            <p>Lorem ipsum dolor sit amet.</p>
           </div>
           <div class="card card-tenis">
             <img src="/view/img/bolso-head-tenis.jpg" alt="bolso-tenis" />
             <h1>Bolso Paletero Head</h1>
             <p class="price">$19.99</p>
-            <p>Lorem ipsum dolor sit amet.</p>
           </div>
         </article>
       </section>
-      <section id="section-natacion" class="section-4">
-        <h3 class="section-name">Natación</h3>
+      <!--<section id="section-natacion" class="section-4">-->
+      <section class="section-4">
+        <a name="section-natacion"></a>
+        <h2 class="section-name">Natación</h2>
         <article>
           <div class="card card-natacion">
             <img
@@ -128,22 +128,16 @@
             />
             <h1>Antiparras Arco</h1>
             <p class="price">$19.99</p>
-            <p>Lorem ipsum dolor sit amet.</p>
           </div>
           <div class="card card-natacion">
             <img src="/view/img/gorro-natacion.jpg" alt="gorro-natacion" />
             <h1>Gorro Arena</h1>
             <p class="price">$19.99</p>
-            <p>Lorem ipsum dolor sit amet.</p>
           </div>
           <div class="card card-natacion">
-            <img
-              src="/view/img/patas-de-rana-natacion.jpg"
-              alt="patas-natacion"
-            />
+            <img src="/view/img/patas-de-rana-natacion.jpg" alt="patas-natacion"/>
             <h1>Patas de Rana Arena</h1>
             <p class="price">$19.99</p>
-            <p>Lorem ipsum dolor sit amet.</p>
           </div>
         </article>
       </section>
