--- a/public/view/css/styles.css
+++ b/public/view/css/styles.css
@@ -1,6 +1,8 @@
+* {
+  box-sizing: border-box;
+}
 /*  BODY */
 body {
-  /* background-color: aqua; */
   margin: 0;
   font-family: Verdana, sans-serif;
   font-size: 15px;
@@ -10,8 +12,14 @@ body {
 }
 /* HEADER */
 .header {
+  width: 100%;
   text-align: center;
-  background-color: #fa9741;
+
+  background: linear-gradient(
+    to right,
+    #ebd722 0%,
+    #e44e52 100%
+  ); 
 }
 
 .title {
@@ -19,35 +27,75 @@ body {
   margin-top: 3%;
 }
 
-.header img {
-  width: 10%;
-  height: 10%;
+.logo {
+  width: 8%;
+  height: 7%;
   float: left;
   margin-left: 5%;
 }
 
+.search, .cart{
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  position: absolute;
+}
+
+.search{
+  left: 40%;
+  top: 5%;
+  text-align: center;
+  background: rgb(255, 255, 255);
+  padding: 20px;
+  height: 40px;
+  border-radius: 40px;
+}
+
+.form-search{
+  border: none;
+  background: none;
+  outline: none;
+  color: #000;
+  font-size: 18px;
+  float: left;
+  line-height: 40px;
+}
+
+.cart{
+  left: 90%;
+  top: 5%;
+  font-size:40px;
+  color: white;
+}
+
+
 /* NAVIGATOR (OPTIONS) */
 nav {
-  /* position: absolute; */
-  display: block;
+  position: absolute;
   width: 10%;
   height: 100%;
-  position: fixed;
-  top: 110px;
+  margin-top: 8%;
   text-align: center;
-  background-color: lightgray;
 }
 
 ul {
-  /* list-style-type: none; */
+  margin: 0;
+  padding: 0;
+}
+
+li{
   margin: 0;
   padding: 0;
 }
 
 li a {
   display: block;
-  padding: 8px 0 8px 0px;
+  border-bottom-right-radius: 5px;
+  padding-top: 10px;
+  padding-bottom: 20px;
+  text-align: center;
   text-decoration: none;
+  font-family: 'Bebas Neue', cursive;
   color: #000;
 }
 
@@ -80,7 +128,7 @@ li a.section-tenis {
 }
 
 li a.section-natacion:hover {
-  background-color: #45A4C4;
+  background-color: #45a4c4;
   color: white;
 }
 
@@ -88,26 +136,21 @@ li a.section-natacion {
   background-color: #6dcafc;
 }
 
+.menu img {
+  width: 20%;
+  height: 10%;
+  /* width: 30px;
+  height: 30px; */
+}
+
+.menu a {
+  text-align: center;
+}
 /* MAIN (SECTIONS) */
 main {
   margin-left: 10%;
   text-align: center;
   margin-bottom: 50px;
-  /* background-color: greenyellow; */
-}
-
-.menu img {
-  width: 20%;
-  height: 10%;
-}
-
-/* FOOTER */
-.footer {
-  padding: 1em;
-  margin-top: auto;
-  z-index: 1;
-  text-align: center;
-  background-color: yellow;
 }
 
 article {
@@ -118,16 +161,19 @@ article {
 .card {
   max-width: 25%;
   max-height: 30%;
+  padding-bottom: 40px;
   text-align: center;
-  font-family: arial;
   box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
 }
 
+h1.description{
+  font-family: 'Roboto', sans-serif;
+  font-size: 18px;
+}
+
 .card img {
-  /* width: 30%;
-    height: 35%; */
-  height: 250px;
-  width: 250px;
+  width: 50%;
+  height: 50%;
   object-fit: cover;
 }
 
@@ -149,10 +195,69 @@ article {
 
 .price {
   color: grey;
-  font-size: 22px;
+  font-family: 'Bebas Neue', cursive;
+  font-size: 30px;
+}
+
+.sub-title{
+  margin: 30px 0; 
+  height: 60px;
+  border-radius: 5px;
+  margin-left: 6%;
+  margin-right: 6%;
+  margin-bottom: 2%;
+  text-align: center;
+  color: black;
+}
+
+.sub-futbol{
+  background-color: #77f073;
+}
+
+.sub-basquet{
+  background-color: #fa4443;
+}
+
+.sub-tenis{
+  background-color: #fad141;
+}
+
+.sub-natacion{
+  background-color: #6dcafc;
 }
 
 .section-name {
-  text-align: justify;
-  margin-left: 8%;
+  font-size:50px;
+  font-family: 'Bebas Neue', cursive;
+}
+
+
+.button {
+  text-decoration: none;
+  padding: 10px;
+  padding-left: 30px;
+  padding-right: 30px;
+  font-weight: 600;
+  font-family: 'Roboto', sans-serif;
+  font-size: 15px;
+  color: #ffffff;
+  background-color: #33c3f0;
+  border-radius: 6px;
+  border: 2px solid #33c3f0;
+}
+.button:hover {
+  color: #33c3f0;
+  background-color: #ffffff;
+}
+/* FOOTER */
+.footer {
+  padding: 1em;
+  margin-top: auto;
+  z-index: 1;
+  text-align: center;
+  background: linear-gradient(
+    to right,
+    #b222eb 0%,
+    #e44e52 100%
+  ); 
 }
