--- a/public/css/section-deportes.css
+++ b/public/css/section-deportes.css
@@ -139,7 +139,7 @@ a.sub:hover {
 .card {
     display: flex;
     width: 100%;
-    height: 30rem;
+    height: fit-content;
     margin: 0 6% 3% 6%;
     box-shadow: 4px 4px 8px 4px rgba(0, 0, 0, 0.2);
 }
@@ -212,6 +212,27 @@ a.sub:hover {
     font-family: 'Roboto', sans-serif;
 }
 
+.control-button {
+    display: flex;
+    margin-left: 0;
+}
+
+.button {
+    text-decoration: none;
+    padding: 1%;
+    font-weight: 600;
+    font-size: 1rem;
+    font-family: 'Roboto', sans-serif;
+    color: #ffffff;
+    background-color: rgb(70, 221, 43);
+    border-radius: 6px;
+    border: 2px solid rgb(70, 221, 43);
+}
+
+.button:hover {
+    color: rgb(70, 221, 43);
+    background-color: #ffffff;
+}
 
 /* FOOTER */
 
