--- a/public/css/encuesta.css
+++ b/public/css/encuesta.css
@@ -32,7 +32,7 @@
 	margin-bottom: 5px;
 }
 
-.form-control input {
+.form-control input,select {
 	border: 2px solid #f0f0f0;
 	border-radius: 4px;
 	display: block;
@@ -47,7 +47,16 @@
 	border-color: #777;
 }
 
+.form-control select:focus {
+	outline: 0;
+	border-color: #777;
+}
+
 .form-control.success input {
+	border-color: #2ecc71;
+}
+
+.form-control.success select {
 	border-color: #2ecc71;
 }
 
@@ -55,11 +64,15 @@
 	border-color: #e74c3c;
 }
 
+.form-control.error select {
+	border-color: #e74c3c;
+}
+
 .form-control i {
 	visibility: hidden;
 	position: absolute;
 	top: 40px;
-	right: 10px;
+	right: 35px;
 }
 
 .form-control.success i.fa-check-circle {
@@ -89,10 +102,11 @@ input[type=submit], input[type=button], input[type=reset] {
 	border: 2px solid #8e44ad;
 	border-radius: 4px;
 	color: #fff;
-	display: block;
+	display: inline;
 	font-family: inherit;
 	font-size: 16px;
 	padding: 10px;
 	margin-top: 20px;
-	width: 100%;
+	width: 30%;
 }
+
