--- a/public/css/section-deportes.css
+++ b/public/css/section-deportes.css
@@ -1,12 +1,13 @@
 * {
     box-sizing: border-box;
+    margin: 0;
+    padding: 0;
 }
 
 
 /*  BODY */
 
 body {
-    margin: 0;
     min-height: 100vh;
 }
 
