--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -1,12 +1,13 @@
 * {
     box-sizing: border-box;
+    margin: 0;
+    padding: 0;
 }
 
 
 /*  BODY */
 
 body {
-    margin: 0;
     min-height: 100vh;
     display: flex;
     flex-direction: column;
@@ -16,44 +17,42 @@ body {
 /* HEADER */
 
 .header {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
     width: 100%;
     background: linear-gradient( to right, #ebd722 0%, #e44e52 100%);
+    border-bottom: 1px solid #b6a7a7;
+    box-shadow: 0 4px 20px 0 rgba(139, 105, 105, 0.2);
 }
 
 .title {
-    display: inline-block;
-    margin-top: 2.5%;
-    margin-left: 16%;
+    width: 100%;
+    position: relative;
+    text-align: center;
     color: black;
     font-family: 'Bebas Neue', cursive;
 }
 
 .logo {
-    position: absolute;
-    width: 8%;
-    height: 15%;
     float: left;
-    margin-bottom: 0;
-    margin-left: 5%;
+    width: 45%;
+    margin-left: 30%;
+    object-fit: cover;
 }
 
 .search,
 .cart {
-    display: flex;
-    justify-content: center;
     align-items: center;
-    position: absolute;
 }
 
 .search {
-    left: 42%;
-    top: 4%;
-    padding: 1%;
-    padding-right: 20rem;
-    height: 40px;
+    position: relative;
+    width: 100%;
+    margin-right: 2em;
+    padding: 5px 1% 0 1%;
     border-radius: 40px;
-    text-align: 30px;
-    background: white;
+    background: rgba(255, 255, 255, 0.6)
 }
 
 .form-search {
@@ -67,14 +66,15 @@ body {
 }
 
 .button-search {
-    position: relative;
-    left: 120%;
+    float: right;
+}
+
+.cart-shop {
+    margin-right: 50px;
 }
 
 .cart {
-    margin-left: 20rem;
-    left: 65%;
-    top: 4%;
+    text-align: left;
     font-size: 40px;
     -webkit-text-stroke: 2px black;
     color: transparent;
@@ -88,29 +88,35 @@ body {
 /* NAVIGATOR (OPTIONS) */
 
 nav {
-    position: fixed;
-    width: 10%;
-    height: 100%;
-    margin-top: 7.3%;
+    width: 100%;
+    height: 10%;
+    padding-top: 5px;
+    padding-bottom: 5px;
     text-align: center;
+    background: linear-gradient( to right, #f1e78b 6%, #f78c90 100%);
+    /* border-bottom: 1px solid #000000; */
+    box-shadow: 0 8px 10px 0 rgba(139, 105, 105, 0.2);
+}
+
+ul,
+li {
+    list-style: none;
 }
 
 ul {
-    margin: 0;
-    padding: 0;
+    display: flex;
+    justify-content: center;
 }
 
 li {
-    margin: 0;
-    padding: 0;
+    width: 30%;
+    margin: 1%;
+    margin-top: 10px;
 }
 
 li a {
-    margin: 5% 0 5% 25%;
-    display: block;
-    border-bottom-right-radius: 5px;
-    padding-top: 10px;
-    padding-bottom: 15px;
+    padding: 15px 20% 10px 20%;
+    border-radius: 5px;
     text-align: center;
     text-decoration: none;
     font-family: 'Bebas Neue', cursive;
@@ -155,19 +161,20 @@ li a.section-natacion {
 }
 
 .menu img {
-    width: 20%;
-    height: 10%;
+    float: center;
+    width: 20px;
+    height: 20px;
+    object-fit: cover;
 }
 
 .menu a {
-    text-align: center;
+    text-align: right;
 }
 
 
 /* MAIN (SECTIONS) */
 
 main {
-    margin-left: 10%;
     text-align: center;
     margin-bottom: 50px;
 }
@@ -297,4 +304,5 @@ h1.description {
     z-index: 1;
     text-align: center;
     background: linear-gradient( to right, #b222eb 0%, #e44e52 100%);
+    border-top: 1px solid #000000;
 }
