--- a/public/css/section-deportes.css
+++ b/public/css/section-deportes.css
@@ -15,44 +15,42 @@ body {
 /* HEADER */
 
 .header {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
     width: 100%;
     background: linear-gradient( to right, #ebd722 0%, #e44e52 100%);
+    border-bottom: 1px solid #b6a7a7;
+    box-shadow: 0 4px 20px 0 rgba(139, 105, 105, 0.2);
 }
 
 .title {
-    display: inline-block;
-    margin-top: 2.5%;
-    margin-left: 16%;
+    width: 100%;
+    position: relative;
+    text-align: center;
     color: black;
     font-family: 'Bebas Neue', cursive;
 }
 
 .logo {
-    position: absolute;
-    width: 8%;
-    height: 15%;
     float: left;
-    margin-bottom: 0;
-    margin-left: 5%;
+    width: 45%;
+    margin-left: 30%;
+    object-fit: cover;
 }
 
 .search,
 .cart {
-    display: flex;
-    justify-content: center;
     align-items: center;
-    position: absolute;
 }
 
 .search {
-    left: 42%;
-    top: 4%;
-    padding: 1%;
-    padding-right: 20rem;
-    height: 40px;
+    position: relative;
+    width: 100%;
+    margin-right: 2em;
+    padding: 5px 1% 0 1%;
     border-radius: 40px;
-    text-align: 30px;
-    background: white;
+    background: rgba(255, 255, 255, 0.6)
 }
 
 .form-search {
@@ -66,14 +64,15 @@ body {
 }
 
 .button-search {
-    position: relative;
-    left: 120%;
+    float: right;
+}
+
+.cart-shop {
+    margin-right: 50px;
 }
 
 .cart {
-    margin-left: 20rem;
-    left: 65%;
-    top: 4%;
+    text-align: left;
     font-size: 40px;
     -webkit-text-stroke: 2px black;
     color: transparent;
@@ -82,7 +81,6 @@ body {
 .cart:hover {
     -webkit-text-stroke: 2px white;
 }
-
 
 /*  MAIN */
 
@@ -140,7 +138,7 @@ a.sub:hover {
 .card {
     display: flex;
     width: 100%;
-    height: 30rem;
+    height: fit-content;
     margin: 0 6% 3% 6%;
     box-shadow: 4px 4px 8px 4px rgba(0, 0, 0, 0.2);
 }
@@ -213,6 +211,27 @@ a.sub:hover {
     font-family: 'Roboto', sans-serif;
 }
 
+.control-button {
+    display: flex;
+    margin-left: 0;
+}
+
+.button {
+    text-decoration: none;
+    padding: 1%;
+    font-weight: 600;
+    font-size: 1rem;
+    font-family: 'Roboto', sans-serif;
+    color: #ffffff;
+    background-color: rgb(70, 221, 43);
+    border-radius: 6px;
+    border: 2px solid rgb(70, 221, 43);
+}
+
+.button:hover {
+    color: rgb(70, 221, 43);
+    background-color: #ffffff;
+}
 
 /* FOOTER */
 
