--- a/public/css/encuesta.css
+++ b/public/css/encuesta.css
@@ -145,6 +145,7 @@ select {
     visibility: visible;
 }
 
+
 input[type=submit],
 input[type=button],
 input[type=reset] {
@@ -157,7 +158,8 @@ input[type=reset] {
     font-size: 16px;
     padding: 10px;
     margin-top: 20px;
-    width: 30%;
+    width: 33%;
+    
 }
 
 input[type=submit]:hover,
@@ -167,6 +169,16 @@ input[type=reset]:hover {
     background-color: white;
 }
 
+#btn-send[disabled] {
+    background-color: gray;
+    border: 2px solid gray;
+}
+
+#btn-send[disabled]:hover {
+    background-color: white;
+    border: 2px solid gray;
+    color: gray;
+}
 
 /* FOOTER */
 
