--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -52,7 +52,7 @@ body {
     margin-right: 2em;
     padding: 5px 1% 0 1%;
     border-radius: 40px;
-    background: rgba(255, 255, 255, 0.6)
+    background: #ffffff99;
 }
 
 .form-search {
