carrito ventana modal con Jquery - tabla de productos - refactoreo de carrito.js

--- a/public/css/carrito.css
+++ b/public/css/carrito.css
@@ -21,7 +21,7 @@
     font-size: large;
 }
 
-#vaciar-carrito {
+#cleanCart {
     display: inline-block;
     background: #c44a4a;
     color: #fff;
